2004-06-02 Mikhail Khodjaiants

	Moved externalized strings to the right property file.

	* cdi/org/eclipse/cdt/debug/mi/core/cdi/CdiResources.properties
	* src/org/eclipse/cdt/debug/mi/core/MIPluginResources.properties

2004-0602 Alain Magloire

	Overload getFullName() for registerObject

	* cdi/org/eclipse/cdt/debug/mi/core/cdi/mode/RegisterObject.java

2004-05-28 Alain Magloire

	GDB has special "types"
	int8_t int16_t etc ... parse them also.

	* cdi/org/eclipse/cdt/debug/mi/core/cdi/SourceManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Register.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/RegisterObject.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/type/ArrayValue.java

2004-05-28 Alain Magloire

	QuickFix for PR 58249

	* cdi/org/eclipse/cdt/debug/mi/core/cdi/SourceManager.java
2004-05-28 Alain Magloire

	Error in looking for the CIdentifier.
	* src/org/eclipse/cdt/debug/mi/core/GDBTypeParser.java

2004-05-28 Alain Magloire

	Fix to PR 60020.
	GDB returns the children when a pointer
	points to a structure.
	Also ignore the keyword "const" when parsing.

	* cdi/org/eclipse/cdt/debug/mi/core/cdi/SourceManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Variable.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/VariableObject.java
	* src/org/eclipse/cdt/debug/mi/core/GDBTypeParser.java

2004-05-18 Alain Magloire

	Remove dependencies on the compatibility plugin
	and move to be more Eclipse-3.0 compliant.

2004-05-07 Alain Magloire
	PR 57127. Pass the stream verbatim
	even if it has spaces.
	This what gdb expects.

	* mi/org/eclipse/cdt/debug/mi/core/command/MIEnvironmentCD.java

2004-05-07 Alain Magloire

	Patch from Keith Rolling(Palm Source).
	PR 60664
	* src/org/eclipse/cdt/debug/mi/core/MIInferior.java

2004-04-01 Alain Magloire

	GDBServer configuration should be "*" not "native"

	* plugin.xml

2004-03-23 Alain Magloire
